--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -12,9 +12,21 @@
           id="emailInput"
         />
 
-        <label class="form-label words" for="emailInput">Enter Email</label>
+        <label class="form-label words" for="usernameInput">Enter Email</label>
       </div>
-      <p></p>
+      <div class="mb-3 form-floating">
+        <input
+          class="form-control"
+          type="text"
+          name="username"
+          placeholder="Enter Username"
+          id="usernameInput"
+        />
+
+        <label class="form-label words" for="usernameInput"
+          >Enter Username</label
+        >
+      </div>
       <div class="mb-3 form-floating">
         <input
           id="passwordInput"
