--- a/templates/putter_specs.html
+++ b/templates/putter_specs.html
@@ -1,3 +1,27 @@
 {% extends 'base.html' %} {% block body%}
 <h1>putter specs</h1>
+<h1>{{ putter.name }}</h1>
+
+{% if session.get('user_email') %}
+<h2>Have you seen this movie?</h2>
+<div class="mb-3 form-check form-switch">
+  <input class="form-check-input" type="checkbox" />
+  <label for="">Yes</label>
+</div>
+<h2>Rate this Putter</h2>
+<form action="/putters/{{ putter.putter_id }}/ratings" method="POST">
+  <p>
+    Rating:
+    <select name="rating">
+      <option value="">Select rating</option>
+      {% for num in range(6) %}
+      <option value="{{ num }}">{{ num }}</option>
+      {% endfor %}
+    </select>
+  </p>
+  <p><input type="submit" /></p>
+</form>
+{% endif %}
+
+<img src="{{ putter.putter_path }}" />
 {% endblock %}
