--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
         <div class="collapse navbar-collapse">
           <div class="navbar-nav">
             <a class="nav-link nav-size" href="/putters">View Our Putters</a>
+            <a class="nav-link nav-size" href="/users">Users</a>
             <a class="nav-link nav-size" href="/cart">My Shopping Cart</a>
             {% if 'user_email' in session %}
             <a class="nav-link nav-size" href="/logout">Log Out</a>
