--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,7 +2,7 @@
 <div class="spacer"></div>
 <h1>My Shopping Cart</h1>
 
-<table class="table table-striped mt-3">
+<table class="table table-striped table-dark mt-3">
   <thead>
     <tr>
       <th>Putter Name</th>
