--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %} {% block body %}
-<h1>{{ user.username }}'s page</h1>
+<h1>Welcome to {{ user.username }}'s page</h1>
 
 <h2>{{user.username}}'s Ratings</h2>
 <ul>
