--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,9 @@
     <img class="putt_spec_img" src="{{putter.putter_path}}" alt="" />
   </a>
 </div>
-<h1>Our Putters</h1>
+<h1>Trending Putters</h1>
 <div id="testimonial-carousel" class="carousel slide" data-bs-ride="100">
-  <div class="carousel-inner">
+  <div class="carousel-inner trending">
     <div class="carousel-item active container-fluid">
       <h2>Buckingham Infinite</h2>
       <img
@@ -31,6 +31,13 @@
         src="https://www.pgatoursuperstore.com/dw/image/v2/BCFG_PRD/on/demandware.static/-/Sites-master-catalog-pgatss/default/dw216b2ce1/Golf-Clubs/Wedges-Putters/Mens-Putters/Ping/2000000001376/2000000001376_1.png?sw=767&sh=767&sm=fit"
       />
       <em>$169.00</em>
+    </div>
+    <div class="carousel-item container-fluid">
+      <h2>Spider GT Red #3</h2>
+      <img
+        src="https://www.pgatoursuperstore.com/dw/image/v2/BCFG_PRD/on/demandware.static/-/Sites-master-catalog-pgatss/default/dw4434623a/Golf-Clubs/Wedges-Putters/Mens-Putters/TaylorMade/2000000025357/TM22PTR_TA406_Spider_GT_Red_No3_SOL_v2.png?sw=767&sh=767&sm=fit"
+      />
+      <em>$250.00</em>
     </div>
   </div>
   <button
