--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %} {% block body %}
-<h1>Welcome to {{ user.username }}'s page</h1>
-
+<h1 class = "welcome">Welcome to {{ user.username }}'s page</h1>
+<section class "user_page">
+  <div id = "user_ratings">
 {%if user.ratings%}
 <h2>{{user.username}}'s Ratings</h2>
 <ul>
@@ -13,8 +14,11 @@
 </ul>
 {%else%}
 <h4 class="text-muted">This user has not submitted any ratings</h4>
-{%endif%} {%if user.have_used%}
-<h2>Putters {{user.username}} has used</h2>
+{%endif%}
+</div>
+<div id = "user_bag">
+ {%if user.have_used%}
+<h2>{{user.username}}'s Golf Bag</h2>
 <ul>
   {% for haveUsed in user.have_used %}
   <li>{{ haveUsed.putter.name }}</li>
@@ -22,4 +26,5 @@
 </ul>
 {%else%}
 <h4 class="text-muted">This user has not submitted any putters as used</h4>
-{%endif%} {%endblock%}
+{%endif%} 
+</div></section>{%endblock%}
