--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -21,7 +21,10 @@
 <h2>{{user.username}}'s Golf Bag</h2>
 <ul>
   {% for haveUsed in user.have_used %}
-  <li>{{ haveUsed.putter.name }}</li>
+  <div>
+  <li>{{ haveUsed.putter.name }} </li>
+  <img class = "tiny_img" src={{haveUsed.putter.putter_path}} alt="">
+  </div>
   {% endfor %}
 </ul>
 {%else%}
