--- a/templates/putters.html
+++ b/templates/putters.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %} {% block body%}
 
-<h1>Inventory</h1>
+<h1>Our Putters</h1>
 
 <section class="putters">
     {%for putter in clubs%}
